--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@asymmetrik/ngx-leaflet": "^4.0.0",
     "@ionic-native/camera": "^4.19.0",
     "@ionic-native/core": "~4.17.0",
     "@ionic-native/geolocation": "^4.18.0",
@@ -36,6 +37,8 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "leaflet": "^1.4.0",
+    "ngGeolocation": "0.0.7",
     "rxjs": "5.5.11",
     "rxjs-compat": "^6.3.3",
     "sw-toolbox": "3.6.0",
@@ -43,7 +46,11 @@
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.2.1",
+    "@types/leaflet": "^1.2.14",
     "typescript": "~2.6.2"
+  },
+  "config": {
+    "ionic_copy": "copy.config.js"
   },
   "description": "An Ionic project",
   "cordova": {
